<resources>
    <string name="app_name">RIDER</string>
    <string name="title_home">Home</string>
    <string name="title_earnings">Earnings</string>
    <string name="title_rating">Rating</string>
    <string name="title_account">Account</string>
    <string name="title_requests">Requests</string>

    <string name="state_online">Online</string>
    <string name="state_offline">Offline</string>

    <string name="text_view_home_fragment">Home Fragment</string>
    <string name="text_view_earnings_fragment">Earnings Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_ratings_fragment">Ratings Fragment</string>
    <string name="text_view_account_fragment">Account Fragment</string>
    <string name="five_star_biker">5-STAR BIKER</string>
    <string name="cancellation_details_label">CANCELLATION DETAILS</string>
    <string name="acceptance_details_label">ACCEPTANCE DETAILS</string>
    <string name="rating_details_label">RATING DETAILS</string>
    <string name="rider_compliments_label">RIDER COMPLIMENTS</string>
    <string name="current_acceptance_rate_label">CURRENT ACCEPTANCE RATE</string>
    <string name="acceptance_details_information_label">Your Acceptance Rate is based on the percentage of delivers requests you\'ve accepted over the last 7 days. if you see your rate drastically change, it\'s likely that you haven\'t had a high number of recent requests.</string>
    <string name="cancellation_details_information_label">Your cancellation rate is on the percentage of deliveries you cancel after accepting them over the last 7 days. low rates lead to better reliability and efficiency. if you see your rate drastically change, it\'s likely that you haven\'t had a high number of recent requests.</string>
    <string name="current_star_rating_label">CURRENT STAR RATING</string>
    <string name="current_star_rating_information_label">Your clients rate delivers on a scale of 1-5 stars. Your rating is the average of client\'s ratings from your last 500 rated deliveries.</string>
    <string name="current_cancellation_rate_label">CURRENT CANCELLATION RATE</string>
    <string name="edit_account_label">Edit Account</string>
    <string name="rider_profile_label">Rider Profile</string>
    <string name="sign_in_label">SIGN IN</string>
    <string name="signUp">Sign Up</string>
    <string name="already_user">Have an account? Log In</string>
    <string name="newUser">Ride with ByBike? Sign Up</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="registered_email">Registered Email</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="Space">\t\t\t\t\t</string>
    <string name="accept">Accept</string>

    <string name="preference_file_key">com.muhammadelsayed.bybike_rider.SHARED_PREFERENCE</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="rider_profile">Rider Profile</string>
    <string name="your_clients_will_see_this">Your clients will see this</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_driver_tracking">Map</string>
    <string name="call">CALL</string>
    <string name="update_email">UPDATE EMAIL</string>
    <string name="vehicle_description">Vehicle Description</string>
    <string name="cancel">Cancel</string>
</resources>
